Update composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "finnian/logline-php",
+    "name": "developius/logline-php",
     "description": "PHP library for interfacing with LogLine",
     "type": "library",
     "license": "MIT",
